Revision history for Perl extension Module::Manifest

0.02 Mon 25 Sep 2006
	- Fixing a major POD bug (got the name wrong) :(

0.01 Sun 24 Sep 2006
	- original version