@@ -2,6 +2,7 @@ Revision history for Perl extension Module::Manifest
 
 0.02 Mon 25 Sep 2006
 	- Fixing a major POD bug (got the name wrong) :(
+	- Upgrading to Module::Install 0.72
 
 0.01 Sun 24 Sep 2006
 	- original version
